Frames Folder disappering in Git issue resolved.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 *.meta
 GameMaker/Assets/StreamingAssets/Frames/LoadedGame.txt
 GameMaker/Assets/StreamingAssets/Frames/*
+!GameMaker/Assets/StreamingAssets/Frames/KeepFramesFolder.txt
